feature: get company with redis
